# TestintAlloy

./: Cargo.toml
abi/: Counter.json
src/: main.rs
