[package]
name = "connect-kaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.1.4", features = ["full", "node-bindings"] }
aws-config = "1.5.4"
aws-sdk-kms = "1.35.0"
eyre = "0.6.12"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
